--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,7 @@
   --black: #000000;
   --primary: #FF0000;
   --primary-dark: #1D1B28;
-  --contrast: #8B00FF;
+  --contrast: #FF8B00;
   --danger: #EF4444;
   --red: #F87171;
   --semi-white: rgba(255, 255, 255, 0.2);
