--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,19 @@
       ogImage: ogImage
     }); 
     -%>
+    <style type="text/css">
+      <!--
+      body {
+        scrollbar-3dlight-color: #000000;
+        scrollbar-arrow-color: #922121;
+        scrollbar-darkshadow-color: #000000;
+        scrollbar-face-color: #000000;
+        scrollbar-highlight-color: #ffffff;
+        scrollbar-shadow-color: #ffffff;
+        scrollbar-track-color: #ad1818;
+      }
+      -->
+      </style>
   </head>
   <body class="d-flex text-white bg-dark" style="min-height: 100%;">
     
