--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,6 +58,11 @@
               <label class="form-check-label" for="traitNormalization">Trait Normalization</label>
             </div>
           </div>
+
+          <div>
+            <a href="/">Reset</a>
+          </div>
+
         </form>
         <div class="trait-fileter-offcanvas offcanvas offcanvas-start" tabindex="-1" id="traitFilterOffcanvas" aria-labelledby="traitFilterOffcanvasLabel">
           <div class="offcanvas-header">
