--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,9 +16,9 @@
   --white: #FFFFFF;
   --gray: var(--gray-400);
   --black: #000000;
-  --primary: #FF0000;
+  --primary: #22B38C;
   --primary-dark: #1D1B28;
-  --contrast: #8B00FF;
+  --contrast: #006CEB;
   --danger: #EF4444;
   --red: #F87171;
   --semi-white: rgba(255, 255, 255, 0.2);
