--- a/views/punk.ejs
+++ b/views/punk.ejs
@@ -39,10 +39,10 @@
                 </div>
                 -->
                 <% if (!_.isEmpty(collection_contract_address)) { %>
-                <a class="view-on-link" href="https://opensea.io/assets/ethereum/<%= collection_contract_address %>/<%= punk.id-1 %>" target="_blank">
+                <a class="view-on-link" href="https://a0.artzero.io/#/launchpad/5CRBAgkU7FbZQDJMw585Ftrve1wER2Zay7UxuS5BuchLVAur" target="_blank">
                   <div class="view-on-block text-center">
-                    <img class="view-on-icon" src="/images/opensea.svg">
-                    View on OpenSea
+                    
+                    View on Artzero
                   </div>
                 </a>
                 <% } %>
