--- a/views/punk.ejs
+++ b/views/punk.ejs
@@ -39,10 +39,10 @@
                 </div>
                 -->
                 <% if (!_.isEmpty(collection_contract_address)) { %>
-                <a class="view-on-link" href="https://a0.artzero.io/#/launchpad/5CRBAgkU7FbZQDJMw585Ftrve1wER2Zay7UxuS5BuchLVAur" target="_blank">
+                <a class="view-on-link" href="https://www.climategirl.eco" target="_blank">
                   <div class="view-on-block text-center">
                     
-                    View on Artzero
+                    Mint on Climategirl.eco
                   </div>
                 </a>
                 <% } %>
