--- a/views/matrix.ejs
+++ b/views/matrix.ejs
@@ -18,7 +18,7 @@
       <%- include('./component/header'); -%>
       <main class="px-3" style="min-height: 100%;">
         <h1 class="heading upper text-center">Total</h1>
-        <h1 class="superbig upper text-center"><%= totalPunkCount -1 %></h1>
+        <h1 class="superbig upper text-center"><%= totalPunkCount %></h1>
         <hr class="mt-5 mb-5">
         <h1 class="heading upper text-center">Trait Type Matrix</h1>
         <%
