--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,7 @@
   --white: #FFFFFF;
   --gray: var(--gray-400);
   --black: #000000;
-  --primary: #22B38C;
+  --primary: #ff0000;
   --primary-dark: #1D1B28;
   --contrast: #006CEB;
   --danger: #EF4444;
