--- a/views/punk.ejs
+++ b/views/punk.ejs
@@ -39,10 +39,10 @@
                 </div>
                 -->
                 <% if (!_.isEmpty(collection_contract_address)) { %>
-                <a class="view-on-link" href="https://www.climategirl.eco" target="_blank">
+                <a class="view-on-link" href="https://www.robotdoodle.com" target="_blank">
                   <div class="view-on-block text-center">
                     
-                    Mint on Climategirl.eco
+                    Mint on RobotDoodle.com
                   </div>
                 </a>
                 <% } %>
