--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,7 +18,7 @@
   --black: #000000;
   --primary: #201c1c;
   --primary-dark: #1D1B28;
-  --contrast: #1a1616;
+  --contrast: #000000;
   --danger: #EF4444;
   --red: #F87171;
   --semi-white: rgba(255, 255, 255, 0.2);
