--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,9 +16,9 @@
   --white: #FFFFFF;
   --gray: var(--gray-400);
   --black: #000000;
-  --primary: #00F453;
+  --primary: #222523;
   --primary-dark: #1D1B28;
-  --contrast: #45f400;
+  --contrast: #000000;
   --danger: #EF4444;
   --red: #F87171;
   --semi-white: rgba(255, 255, 255, 0.2);
