--- a/views/index.ejs
+++ b/views/index.ejs
@@ -89,7 +89,7 @@
             <% } %>
           </div>
         </div>
-        <h3 class="mb-4">Total: <%= totalPunkCount %></h3>
+        <h3 class="mb-4">Total: <%= totalPunkCount-1 %></h3>
         <p style="line-height: var(--font-size-lg);">
         </p>
         <div class="row punks">
